--- a/Visualizer/src/MainWindow/MainWindow.fxml
+++ b/Visualizer/src/MainWindow/MainWindow.fxml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.web.WebView?>
 
-<?import javafx.scene.control.Button?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.71" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainWindow.MainWindowController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainWindow.MainWindowController">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints />
       <RowConstraints />
    </rowConstraints>
-   <children>
-      <WebView fx:id="webView" />
-      <Button fx:id="myBtn" onAction="#loadWebsite">Knap</Button>
-   </children>
+         <children>
+            <WebView fx:id="webView" prefHeight="653.0" GridPane.rowIndex="2" />
+            <Button fx:id="myBtn" onAction="#loadWebsite" GridPane.rowIndex="2">Knap</Button>
+            <Button fx:id="showExecuterWindowBtn" onAction="#showExecutor" prefHeight="0.0" prefWidth="140.0" text="Show UPPAAL Executer">Show UPPAAL Executer</Button>
+         </children>
 </GridPane>
