SW-87: moves stuff in execute window

--- a/Visualizer/src/UPPAALExecutor/UPPAALExecutor.fxml
+++ b/Visualizer/src/UPPAALExecutor/UPPAALExecutor.fxml
@@ -7,9 +7,9 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UPPAALExecutor.UPPAALExecutor">
    <children>
-      <Button layoutX="222.0" layoutY="135.0" mnemonicParsing="false" onAction="#ExecuteQuery" text="Execute!" />
-      <TextField fx:id="ModelPathField" layoutX="200.0" layoutY="59.0" promptText="ModelPath" />
-      <TextField fx:id="ModelNameField" layoutX="200.0" layoutY="93.0" promptText="ModelName" />
+      <Button layoutX="245.0" layoutY="104.0" mnemonicParsing="false" onAction="#ExecuteQuery" text="Execute!" />
+      <TextField fx:id="ModelPathField" layoutX="200.0" layoutY="33.0" promptText="ModelPath" />
+      <TextField fx:id="UPPAALPathField" layoutX="200.0" layoutY="68.0" promptText="UPPAAL Path" />
       <TextArea fx:id="ResultArea" layoutX="22.0" layoutY="171.0" prefHeight="200.0" prefWidth="554.0" promptText="Result" />
    </children>
 </AnchorPane>
