--- a/Visualizer/src/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/TopologyViewer/TopologyViewer.fxml
@@ -74,7 +74,7 @@
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="50.0" />
       <RowConstraints />
    </rowConstraints>
 </GridPane>
