--- a/Visualizer/src/View/UPPAALExecutor/QueryVisualizer.fxml
+++ b/Visualizer/src/View/UPPAALExecutor/QueryVisualizer.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UPPAALExecutor.QueryVisualizer">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UPPAALExecutor.QueryVisualizer">
    <children>
       <Button layoutX="245.0" layoutY="104.0" mnemonicParsing="false" onAction="#ExecuteQuery" text="Execute!" />
       <TextField fx:id="UppaalQuery" layoutX="200.0" layoutY="63.0" promptText="Query" />
