adds tostring method and allows ui to load and show topology

--- a/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -40,6 +41,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" />
                   <RowConstraints />
                   <RowConstraints />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" />
                </rowConstraints>
                      <children>
                         <WebView fx:id="webView" prefHeight="653.0" GridPane.rowIndex="2" />
@@ -69,12 +71,14 @@
          </content></Tab>
    </tabs>
 </TabPane>
+      <TextArea fx:id="tempTopologyTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Relations in Topology" GridPane.rowIndex="2" />
     </children>
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints minHeight="50.0" />
+      <RowConstraints />
       <RowConstraints />
    </rowConstraints>
 </GridPane>
