--- a/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -32,15 +33,18 @@
    <tabs>
       <Tab closable="false" text="View Topology">
          <content>
-            <GridPane fx:id="viewerGridPane" hgap="10" vgap="10">
+            <GridPane fx:id="viewerGridPane" hgap="10" prefHeight="250.0" prefWidth="739.0" vgap="10">
                <columnConstraints>
                   <ColumnConstraints />
+                        <ColumnConstraints minWidth="10.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints />
                    <RowConstraints prefHeight="30.0" />
+                        <RowConstraints />
                </rowConstraints>
                      <children>
+                        <Canvas fx:id="topologyViewerCanvas" height="200.0" width="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" />
                          <Button fx:id="myBtn" onAction="#showTopology" prefWidth="200" text="Show Topology" GridPane.halignment="CENTER" GridPane.rowIndex="1">Knap</Button>
                         <TextArea fx:id="tempTopologyTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Relations in Topology" GridPane.rowIndex="2" />
                      </children>
