--- a/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -68,6 +69,7 @@
                    <rowConstraints>
                        <RowConstraints />
                         <RowConstraints />
+                        <RowConstraints />
                    </rowConstraints>
                    <children>
                        <TableView fx:id="tableOutputVars" editable="true" prefHeight="200" prefWidth="800.0" GridPane.rowIndex="0">
@@ -103,6 +105,7 @@
                                <TextField fx:id="txtQuerySimulations" prefHeight="25.0" prefWidth="100.0" promptText="Simulations" GridPane.columnIndex="4" />
                            </children>
                         </GridPane>
+                       <Button mnemonicParsing="false" onAction="#generateQuery" text="Generate Query" GridPane.rowIndex="3" GridPane.halignment="CENTER"/>
                    </children>
                </GridPane>
            </content>
