--- a/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -71,6 +70,8 @@
                        <RowConstraints />
                         <RowConstraints />
                         <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
                    </rowConstraints>
                    <children>
                        <TableView fx:id="tableOutputVars" editable="true" prefHeight="200" prefWidth="800.0" GridPane.rowIndex="0">
@@ -107,7 +108,12 @@
                                <TextField fx:id="txtQuerySimulations" prefHeight="25.0" prefWidth="100.0" promptText="Simulations" GridPane.columnIndex="4" />
                            </children>
                         </GridPane>
-                       <Button mnemonicParsing="false" onAction="#generateQuery" text="Generate Query" GridPane.rowIndex="3" GridPane.halignment="CENTER"/>
+                       <Button mnemonicParsing="false" onAction="#generateQuery" text="Generate Query" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                        <TextArea fx:id="queryGeneratedTextField" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                           <padding>
+                              <Insets left="20.0" right="20.0" />
+                           </padding>
+                        </TextArea>
                    </children>
                </GridPane>
            </content>
