--- a/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
+++ b/Visualizer/src/View/TopologyViewer/TopologyViewer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -45,17 +46,17 @@
          <content>
             <GridPane fx:id="viewerGridPane" hgap="10" prefHeight="250.0" prefWidth="739.0" vgap="10">
                <columnConstraints>
-                  <ColumnConstraints />
-                        <ColumnConstraints minWidth="10.0" />
+                    <ColumnConstraints minWidth="100.0" />
+                    <ColumnConstraints minWidth="800" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints />
-                   <RowConstraints prefHeight="30.0" />
-                        <RowConstraints />
+                    <RowConstraints prefHeight="30.0" />
+                    <RowConstraints />
                </rowConstraints>
                      <children>
-                         <Button fx:id="myBtn" onAction="#showTopology" prefWidth="200" text="Show Topology" GridPane.halignment="CENTER" GridPane.rowIndex="1">Knap</Button>
-                        <TextArea fx:id="tempTopologyTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Relations in Topology" GridPane.rowIndex="2" />
+                        <Button fx:id="myBtn" onAction="#showTopology" prefWidth="200" text="Show Topology" GridPane.halignment="CENTER" GridPane.rowIndex="0">Knap</Button>
+                        <TextArea fx:id="tempTopologyTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Relations in Topology" GridPane.rowIndex="1" />
+                        <SwingNode fx:id="embeddedSwingNode" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.rowSpan="2147483647" />
                      </children>
             </GridPane>
          </content>
