--- a/Visualizer/src/View/MainWindow.fxml
+++ b/Visualizer/src/View/MainWindow.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <GridPane fx:id="rootElement" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MainWindowController">
 
@@ -33,7 +34,7 @@
 <TabPane fx:id="tabPane" GridPane.rowIndex="1">
 
    <tabs>
-      <Tab closable="false" text="View Constants">
+      <Tab closable="false" text="Configuration">
          <content>
             <TableView fx:id="constantsTable" prefHeight="665.0" prefWidth="769.0" GridPane.rowIndex="0">
               <columns>
@@ -42,26 +43,7 @@
               </columns>
             </TableView>
          </content></Tab>
-      <Tab closable="false" text="View Topology">
-         <content>
-            <GridPane fx:id="viewerGridPane" hgap="10" prefHeight="250.0" prefWidth="739.0" vgap="10">
-               <columnConstraints>
-                    <ColumnConstraints minWidth="100.0" />
-                    <ColumnConstraints minWidth="800" />
-               </columnConstraints>
-               <rowConstraints>
-                    <RowConstraints prefHeight="30.0" />
-                    <RowConstraints />
-               </rowConstraints>
-                     <children>
-                        <Button fx:id="myBtn" onAction="#showTopology" prefWidth="200" text="Show Topology" GridPane.halignment="CENTER" GridPane.rowIndex="0">Knap</Button>
-                        <TextArea fx:id="tempTopologyTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Relations in Topology" GridPane.rowIndex="1" />
-                        <SwingNode fx:id="embeddedSwingNode" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.rowSpan="2147483647" />
-                     </children>
-            </GridPane>
-         </content>
-      </Tab>
-       <Tab closable="false" text="Query Generator">
+      <Tab closable="false" text="Query Generator">
            <content>
                <GridPane fx:id="queryGridPane" hgap="10" vgap="10">
                    <columnConstraints>
@@ -69,9 +51,9 @@
                    </columnConstraints>
                    <rowConstraints>
                        <RowConstraints />
-                        <RowConstraints />
-                        <RowConstraints />
-                        <RowConstraints />
+                       <RowConstraints />
+                       <RowConstraints />
+                       <RowConstraints />
                    </rowConstraints>
                    <children>
                        <TableView fx:id="tableOutputVars" editable="true" prefHeight="200" prefWidth="800.0" GridPane.rowIndex="0">
@@ -82,42 +64,61 @@
                                <TableColumn fx:id="outputVarNode" text="Node" />
                            </columns>
                        </TableView>
-                        <GridPane GridPane.rowIndex="1">
-                          <columnConstraints>
-                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                             <ColumnConstraints hgrow="SOMETIMES" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
+                       <GridPane GridPane.rowIndex="1">
+                           <columnConstraints>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                               <ColumnConstraints hgrow="SOMETIMES" />
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                               <ColumnConstraints hgrow="SOMETIMES" />
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
                            <children>
                                <Label text="Options" GridPane.columnIndex="0" GridPane.halignment="CENTER" />
                                <Label text="Time bound: " GridPane.columnIndex="1" GridPane.halignment="RIGHT">
-                                 <padding>
-                                    <Insets right="10.0" />
-                                 </padding></Label>
+                                   <padding>
+                                       <Insets right="10.0" />
+                                   </padding></Label>
                                <TextField fx:id="txtQueryTimeBound" prefHeight="25.0" prefWidth="213.0" promptText="Time bound" GridPane.columnIndex="2" />
                                <Label text="Number of simulations: " GridPane.columnIndex="3" GridPane.halignment="RIGHT">
-                                 <padding>
-                                    <Insets right="10.0" />
-                                 </padding></Label>
+                                   <padding>
+                                       <Insets right="10.0" />
+                                   </padding></Label>
                                <TextField fx:id="txtQuerySimulations" prefHeight="25.0" prefWidth="100.0" promptText="Simulations" GridPane.columnIndex="4" />
                            </children>
-                        </GridPane>
+                       </GridPane>
                        <Button mnemonicParsing="false" onAction="#generateQuery" text="Generate Query" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                        <TextArea fx:id="queryGeneratedTextField" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="3">
+                       <TextArea fx:id="queryGeneratedTextField" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.rowIndex="3">
                            <padding>
-                              <Insets left="20.0" right="20.0" />
+                               <Insets left="20.0" right="20.0" />
                            </padding>
-                        </TextArea>
+                       </TextArea>
                    </children>
                </GridPane>
            </content>
        </Tab>
+      <Tab closable="false" text="Run Query">
+           <content>
+              <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                 <children>
+                    <Button mnemonicParsing="false" onAction="#runSimulationQuery" prefWidth="200.0" text="Run Simulation Query in UPPAAL">
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin></Button>
+                    <TextField fx:id="txtSimulationName" alignment="CENTER" maxWidth="200.0" promptText="Simulation Name" />
+                    <ProgressIndicator fx:id="simulationProgress" />
+                    <TextArea fx:id="txtUppaalOutput" prefHeight="200.0" prefWidth="200.0" wrapText="true">
+                       <padding>
+                          <Insets left="20.0" right="20.0" />
+                       </padding>
+                    </TextArea>
+                 </children>
+              </VBox>
+           </content>
+      </Tab>
    </tabs>
 </TabPane>
     </children>
