SW-151: label til global vars, mangler at tilføje nye vars

--- a/Visualizer/src/View/MainWindow.fxml
+++ b/Visualizer/src/View/MainWindow.fxml
@@ -44,7 +44,7 @@
               </columns>
             </TableView>
          </content></Tab>
-       <Tab closable="false" text="Dynamic Constants">
+       <Tab closable="false" text="Dynamic Updates">
            <content>
                <VBox alignment="TOP_CENTER">
                <TableView fx:id="dynamicTable" editable="true" prefWidth="800.0">
