--- a/Visualizer/src/View/SimulationMenu.fxml
+++ b/Visualizer/src/View/SimulationMenu.fxml
@@ -7,6 +7,15 @@
 
 <Accordion xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SimulationMenuController">
    <panes>
+       <TitledPane text="Display">
+           <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                   <children>
+                       <ListView fx:id="lstDisplayOptions" prefHeight="200.0" prefWidth="200.0" />
+                   </children>
+               </AnchorPane>
+           </content>
+       </TitledPane>
        <TitledPane text="Export">
            <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
