--- a/Visualizer/src/View/MainWindow.fxml
+++ b/Visualizer/src/View/MainWindow.fxml
@@ -77,8 +77,8 @@
                            <columns>
                                <TableColumn fx:id="outputVarUse" text="Use" />
                                <TableColumn fx:id="outputVarName" editable="false" text="Name" />
-                               <TableColumn fx:id="outputVarEdge" text="Edge" />
-                               <TableColumn fx:id="outputVarNode" text="Node" />
+                               <TableColumn fx:id="outputVarEdge" editable="false" text="Edge" />
+                               <TableColumn fx:id="outputVarNode" editable="false" text="Node" />
                            </columns>
                        </TableView>
                        <GridPane GridPane.rowIndex="1">
