--- a/Visualizer/src/View/simulation/SimulationResult.fxml
+++ b/Visualizer/src/View/simulation/SimulationResult.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import View.simulation.SimulationDataContainer?>
 <?import javafx.embed.swing.SwingNode?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.layout.*?>
-<?import View.simulation.SimulationDataContainer?>
-<BorderPane fx:id="rootPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.simulation.SimulationResultController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+
+<BorderPane fx:id="rootPane"  xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.simulation.SimulationResultController">
    <top>
       <HBox fx:id="sliderBox" BorderPane.alignment="TOP_CENTER">
          <children>
@@ -19,15 +23,18 @@
    <center>
       <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-             <SwingNode fx:id="graphStreamNode" />
+             <SwingNode fx:id="graphStreamNode">
+               <StackPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </StackPane.margin></SwingNode>
             <GridPane fx:id="globalVarGridPane" pickOnBounds="false" StackPane.alignment="TOP_LEFT">
                <padding>
                   <Insets left="10.0" top="10.0" />
                </padding>
             </GridPane>
-             <SimulationDataContainer fx:id="nodeVarGridPane" pickOnBounds="false" alignment="BOTTOM_LEFT">
+             <SimulationDataContainer fx:id="nodeVarGridPane" alignment="BOTTOM_LEFT" pickOnBounds="false">
                  <padding>
-                     <Insets left="10.0" bottom="10.0" />
+                     <Insets bottom="10.0" left="10.0" />
                  </padding>
              </SimulationDataContainer>
          </children>
