--- a/Visualizer/src/View/MainWindow.fxml
+++ b/Visualizer/src/View/MainWindow.fxml
@@ -60,6 +60,9 @@
                </VBox>
            </content>
        </Tab>
+       <Tab closable="false" text="Topology Generator">
+           <fx:include source="topology/TopologyGenerator.fxml" fx:id="topologyGenerator"/>
+       </Tab>
       <Tab closable="false" text="Query Generator">
            <content>
                <GridPane fx:id="queryGridPane" hgap="10" vgap="10">
