SW-176: Correctly updates output variables to reflect changes made by topology

--- a/Visualizer/src/View/MainWindow.fxml
+++ b/Visualizer/src/View/MainWindow.fxml
@@ -60,7 +60,7 @@
                </VBox>
            </content>
        </Tab>
-       <Tab fx:id="topologyGeneratorTab" closable="false" text="Topology Generator">
+       <Tab fx:id="topologyGeneratorTab" closable="false" text="Topology Generator" onSelectionChanged="#onLeaveTopologyGeneratorTab">
            <fx:include source="topology/TopologyGenerator.fxml" fx:id="topologyGenerator"/>
        </Tab>
       <Tab closable="false" text="Query Generator">
