--- a/Visualizer/src/View/topology/TopologyGenerator.fxml
+++ b/Visualizer/src/View/topology/TopologyGenerator.fxml
@@ -53,7 +53,9 @@
                         <padding><Insets bottom="10.0" /></padding>
 
                         <Button text="Update" onAction="#updateGlobalOptions" minWidth="100" GridPane.columnIndex="0" GridPane.rowIndex="8" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
+                        <Button text="Preview Topology" onAction="#preview" minWidth="100" GridPane.columnIndex="0" GridPane.rowIndex="9" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
                            <rowConstraints>
+                              <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
