--- a/Visualizer/src/View/topology/TopologyGenerator.fxml
+++ b/Visualizer/src/View/topology/TopologyGenerator.fxml
@@ -2,8 +2,10 @@
 
 <?import View.DoubleTextField?>
 <?import View.IntegerTextField?>
+<?import com.lynden.gmapsfx.GoogleMapView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,8 +14,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.Button?>
-<BorderPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.topology.TopologyGeneratorController">
+<BorderPane fx:id="rootPane" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.topology.TopologyGeneratorController">
    <right>
       <Accordion fx:id="accordion" BorderPane.alignment="CENTER">
         <panes>
@@ -50,10 +51,10 @@
                         <IntegerTextField fx:id="txtAvgNumNodesPrCellDefault" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         <Label text="Deviation" GridPane.columnIndex="0" GridPane.rowIndex="7" />
                         <DoubleTextField fx:id="txtNumNodesPrCellDeviationDefault" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <padding><Insets bottom="10.0" /></padding>
 
-                        <Button text="Update" onAction="#updateGlobalOptions" minWidth="100" GridPane.columnIndex="0" GridPane.rowIndex="8" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
-                        <Button text="Preview Topology" onAction="#preview" minWidth="100" GridPane.columnIndex="0" GridPane.rowIndex="9" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
+                        <Button minWidth="100" onAction="#updateGlobalOptions" text="Update" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+                        <Button minWidth="100" onAction="#preview" text="Preview Topology" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" />
+                        <padding><Insets bottom="10.0" /></padding>
                            <rowConstraints>
                               <RowConstraints />
                               <RowConstraints />
@@ -75,6 +76,11 @@
       </Accordion>
    </right>
    <center>
-      <GridPane BorderPane.alignment="CENTER" fx:id="gridPaneCells" gridLinesVisible="true" alignment="CENTER"/>
+      <AnchorPane BorderPane.alignment="CENTER" >
+         <children>
+            <GoogleMapView fx:id="mapView" />
+            <GridPane fx:id="gridPaneCells" gridLinesVisible="true" pickOnBounds="false" />
+         </children>
+      </AnchorPane>
    </center>
 </BorderPane>
